# frenet_ilqr_controller

./: .pre-commit-config.yaml  Dockerfile  README.md
.github/workflows/: create_dcoker_image.yml  lint.yml
frenet_trajectory_planner/: CMakeLists.txt  README.md  package.xml
frenet_trajectory_planner/demos/: CMakeLists.txt  generate_all_possible_trajectories_demo.cpp  plan_through_waypoint_demo.cpp  plan_trajectory_demo.cpp  select_best_trajectory_demo.cpp
frenet_trajectory_planner/demos/adapters/: circle_adapter_demo.cpp
frenet_trajectory_planner/include/frenet_trajectory_planner/: frenet_frame_converter.hpp  frenet_trajectory_generator.hpp  frenet_trajectory_planner.hpp  frenet_trajectory_selector.hpp  type_definitions.hpp  (+3 more)
frenet_trajectory_planner/src/: frenet_frame_converter.cpp  frenet_trajectory_generator.cpp  frenet_trajectory_planner.cpp  frenet_trajectory_selector.cpp  quartic_trajectory_planner.cpp  quintic_trajectory_planner.cpp
frenet_trajectory_planner/test/: CMakeLists.txt  acceleration_policy_test.cpp  frenet_frame_converter_test.cpp  frenet_trajectory_generator_test.cpp  frenet_trajectory_selector_test.cpp  quartic_trajectory_planner_test.cpp  quintic_trajectory_planner_test.cpp
ilqr_trajectory_tracker/: CMakeLists.txt  README.md
ilqr_trajectory_tracker/demos/: CMakeLists.txt  ilqr_optimizer_demo.cpp
ilqr_trajectory_tracker/src/: ilqr_optimizer.cpp
ilqr_trajectory_tracker/test/: ilqr_optimizer_test.cpp
nav2_frenet_ilqr_controller/: CMakeLists.txt  costs.xml  nav2_frenet_ilqr_controller.xml  package.xml  policies.xml
nav2_frenet_ilqr_controller/include/nav2_frenet_ilqr_controller/: frenet_ilqr_controller.hpp  parameter_handler.hpp  path_handler.hpp  trajectory_visualizer.hpp
nav2_frenet_ilqr_controller/include/nav2_frenet_ilqr_controller/costs/: angular_velocity_cost.hpp  lateral_distance_cost.hpp  latlon_balance_cost.hpp  longtitutal_velocity_cost.hpp  obstacle_cost.hpp  rclcpp_node_cost.hpp
nav2_frenet_ilqr_controller/include/nav2_frenet_ilqr_controller/policies/: constraints_policy.hpp  obstacle_policy.hpp  rclcpp_node_policy.hpp
nav2_frenet_ilqr_controller/src/: frenet_ilqr_controller.cpp  parameter_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
nav2_frenet_ilqr_controller/src/costs/: angular_velocity_cost.cpp  lateral_distance_cost.cpp  latlon_balance_cost.cpp  longtitutal_velocity_cost.cpp  obstacle_cost.cpp
nav2_frenet_ilqr_controller/src/policies/: constraints_policy.cpp  obstacle_policy.cpp  rclcpp_node_policy.cpp
(+23 files in other folders)
